--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uber</title>
-    
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="container">
+                <ul class="menu">
+                    <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="subheader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 offset-md-1">
+                        <a href="#" class="subheader_logo"><img src="img/logo/Uber.png" alt="logo"></a>
+                        <div class="subheader_text">Официальный партнер Uber в Москве</div>
+                    </div>
+                    <div class="col-md-2 offset-md-2">
+                        <div class="subheader_call">Звоните нам ежедневно</div>
+                        <a href="tel:84957970988" class="subheader_tel">8 495 797 09 88</a>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="subheader_btn">заказать звонок</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
 
 </body>
 
