--- a/src/index.html
+++ b/src/index.html
@@ -62,74 +62,128 @@
         </div>
     </section>
 
-    <section class="reason">
+    <section class="reasons">
         <div class="container">
-            <div class="reason_box">Преимущества</div>
-            <div class="reason_cause">8 причин начать работать с нами</div>
+            <div class="label">преимущества</div>
+            <h2 class="title">8 причин начать работать с нами</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="reason_icon">
-                        <img src="icons/icon_1.png" alt="" class="reason_img">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_1.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
+                            <div class="reasons_text">
+                                Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет
+                                никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя,
+                                Вам не нужно искать мелкие деньги для размена.
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Никаких наличных, оплата происходит автоматически</span>Стоимость
-                        поездки
-                        оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с
-                        перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги
-                        для размена.</div>
-                    <div class="reason_icon">
-                        <img src="icons/icon_2.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_2.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
+                            <div class="reasons_text">
+                                У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши
+                                конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают
+                                больше!
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Высокий доход с гарантированными выплатами</span> Мы выплачиваем
-                        заработную плату на
-                        личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать
-                        декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</div>
-
-                    <div class="reason_icon">
-                        <img src="icons/icon_3.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_3.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
+                            <div class="reasons_text">
+                                Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно
+                                оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги
+                                и ведение банковского счета.
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Комфортное, прозрачное и простое подключение</span> Мы подключаем
-                        дистанционно и
-                        бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы
-                        регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_4.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
+                            <div class="reasons_text">
+                                Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить,
+                                нажимаете выйти с линии. Вы можете подрабатывать только утром, вечером, в выходные или
+                                праздничные дни!
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="reason_icon">
-                        <img src="icons/icon_4.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_5.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
+                            <div class="reasons_text">
+                                Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы
+                                присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения,
+                                через 1-2 дня Вы можете начинать работать!
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Круглосуточная поддержка</span> В Uber действует круглосуточная
-                        поддержка водителей
-                        по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line
-                        консультацию.</div>
-                    <div class="reason_icon">
-                        <img src="icons/icon_5.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_6.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Всегда большое количество заказов</div>
+                            <div class="reasons_text">
+                                Приложение показывает, где на данный момент больше всего заказов и где действуют
+                                повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда
+                                приятные и абсолютно неконфликтные люди, которых приятно возить.
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Комиссия 8% + БОНУСЫ</span> У нас минимальная комиссия и мы
-                        выплачиваем бонусы за
-                        каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами
-                        водители зарабатывают больше!</div>
-
-                    <div class="reason_icon">
-                        <img src="icons/icon_6.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_7.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Круглосуточная поддержка</div>
+                            <div class="reasons_text">
+                                В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то
+                                непонятно, Вы всегда можете задать вопрос через On-line консультацию.
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Работа в удобное время, никаких графиков</span> Вы просто нажимаете
-                        кнопку выйти на
-                        линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-
-                        тывать только утром, вечером, в выходные или праздничные дни! </div>
-                    <div class="reason_icon">
-                        <img src="icons/icon_7.png" alt="" class="reason_img">
+                </div>
+                <div class="col-md-6">
+                    <div class="reasons_block">
+                        <div class="reasons_round">
+                            <img src="icons/icon_8.png" alt="reason">
+                        </div>
+                        <div class="reasons_descr">
+                            <div class="reasons_subtitle">Без шашечек и наклеек</div>
+                            <div class="reasons_text">
+                                Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его
+                                наклейками.
+                            </div>
+                        </div>
                     </div>
-                    <div class="reason_text"><span>Всегда большое количество заказов </span> Приложение показывает, где
-                        на данный
-                        момент
-                        больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых
-                        пробегов.
-                        Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</div>
-                    <div class="reason_icon">
-                        <img src="icons/icon_8.png" alt="" class="reason_img">
-                    </div>
-                    <div class="reason_text"><span>Без шашечек и наклеек</span> Вам не нужно менять цвет, устанавливать
-                        «шашки» на
-                        автомобиль и обклеивать его наклейками.</div>
                 </div>
             </div>
         </div>
