--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Uber</title>
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -186,6 +186,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="mobile">
+        <div class="container">
+            <div class="label">Возможности</div>
+            <div class="title">мобильное приложение убер</div>
+            <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный
+                телефон</div>
         </div>
     </section>
 </body>
