--- a/src/index.html
+++ b/src/index.html
@@ -235,6 +235,18 @@
             </div>
         </div>
     </section>
+
+    <section class="car">
+        <div class="container">
+            <div class="car_label_white">Возможности</div>
+            <h2 class="car_title">Выбор - отличная штука!</h2>
+            <div class="car_subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+            <div class="car_icon">
+                <img src="img/car.png" alt="car" class="car_img">
+                <div class="car_descr">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
