--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </header>
 
@@ -371,6 +371,11 @@
         <a href="#" class="world_city">посмотреть все города</a>
     </section>
 
+
+    <footer>
+        <div class="link"></div>
+        <img src="" alt="" class="image">
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
